--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "neverwoods/validformbuilder",
+    "name": "neverwoods/bili",
     "type": "library",
-    "description": "The easiest tool for generating XHTML 1.0 valid and CSS enabled webforms.",
-    "keywords": ["form", "validation", "building"],
-    "homepage": "http://www.validformbuilder.org/",
-    "license": "GNU GPL v2",
+    "description": "The swiss army knife of PHP modules.",
+    "keywords": ["collection", "crypt", "includer", "language],
+    "homepage": "https://neverwoods.beanstalkapp.com/bili/",
+    "license": "Apache v2",
     "authors": [
         {
             "name": "Felix Langfeldt",
@@ -19,6 +19,6 @@
         "php": ">=5.3.0"
     },
     "autoload": {
-        "psr-0": {"ValidFormBuilder": "classes/"}
+        "psr-0": {"Bili": "classes/"}
     }
 }
