--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "library",
     "description": "The swiss army knife of PHP modules.",
     "keywords": ["collection", "crypt", "includer", "language"],
-    "homepage": "https://neverwoods.beanstalkapp.com/bili/",
+    "homepage": "https://neverwoods.com/",
     "license": "Apache v2",
     "authors": [
         {
