--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
+        "php": ">=5.4.0",
+        "ext-curl": "*",
         "mrclay/minify": "2.*",
         "pear/cache_lite": "1.*"
     },
