fix: improve error handling of `is_file` function call

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "php": ">=5.4.0",
         "ext-curl": "*",
+        "ext-fileinfo": "*",
         "mrclay/minify": "2.*",
         "pear/cache_lite": "1.*"
     },
