--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,18 @@
         "ext-curl": "*",
         "ext-fileinfo": "*",
         "mrclay/minify": "2.*",
-        "pear/cache_lite": "1.*"
+        "pear/cache_lite": "1.*",
+        "nesbot/carbon": "^2.62.1"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-0": {"Bili": "classes/"}
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Bili\\Tests\\": "tests/"
+        }
     }
 }
