fix: improve Display::renderNumber method for floating point edge cases

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "php": ">=7.4.0",
         "ext-curl": "*",
         "ext-fileinfo": "*",
+        "ext-bcmath": "*",
         "mrclay/minify": "3.*",
         "pear/cache_lite": "1.*",
         "nesbot/carbon": "^2.62.1"
